--- a/roles/nginx/templates/http.conf.j2
+++ b/roles/nginx/templates/http.conf.j2
@@ -1,13 +1,13 @@
 server {
     listen 80 ;
-    server_name {{ server_name }};
+    server_name {{ item.name }};
 
     if ($http_x_forwarded_proto = "http") {
       return 301 https://$server_name$request_uri;
     }
 
     location / {
-        proxy_pass http://127.0.0.1:{{ docker_port }};
+        proxy_pass http://127.0.0.1:{{ item.port }};
         include /etc/nginx/proxy_params;
     }
 }
